test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_comment_2.draco
proc /**********/ maina() void : a := a; corp;

