test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_comment_1.draco
proc /** a() void : a := a; corp;

